20_rot_matrix/grade.txt
Grading at Wed Feb 20 09:38:13 UTC 2019
Attempting to compile rotate.c
rotate.c: In function ‘rotate’:
rotate.c:7:10: error: ISO C forbids nested functions [-Werror=pedantic]
     for (int j 9; j >= 0; j--){
          ^
rotate.c:7:16: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before numeric constant
     for (int j 9; j >= 0; j--){
                ^
rotate.c:7:19: error: ‘j’ undeclared (first use in this function)
     for (int j 9; j >= 0; j--){
                   ^
rotate.c:7:19: note: each undeclared identifier is reported only once for each function it appears in
rotate.c:8:32: error: expected ‘)’ before ‘;’ token
       printf("%c", matrix[j][i];
                                ^
rotate.c:9:7: error: expected ‘;’ before ‘}’ token
       }
       ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
